# wiremock-googletest-demo

./: .gitignore  CMakeLists.txt  MyClientTest.cpp  README.md
test_data/: hello.json  hello_with_missing_resource.json  hello_with_resource.json
